--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <section id="intro" class="fade-in">
     <div class="intro-content">
       <span>
-      <strong>경험을 통해 배우고</strong>, 계획에서 머무르는것이 아닌 끝까지 <strong>실행하고 완성하는 </strong>학생 김소원 입니다.</span>
+      <strong>성실함과 열정</strong>이라는 나침반으로 항해하고있는<strong>김소원</strong>의 
+        <br>고등학교 3년간의 학교생활을 기록한 포트폴리오 입니다.</span>
       <p>Kim Sowon PORTFOLIO.</p>
     </div>
   </section>
@@ -250,5 +251,6 @@ setVh();
 
 </body>
 </html>
+
 
 
