--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
   <section id="intro" class="fade-in">
     <div class="intro-content">
       <span>
-      <strong>성실함과 열정</strong>이라는 나침반으로 항해하고있는 <strong>김소원</strong>의 
-        <br>고등학교 3년간의 학교생활을 기록한 포트폴리오 입니다.</span>
-
-      열정과 성장을 담은 가능성의 첫페이지 
+      <strong>성실함과 열정</strong>을 담은 <strong>가능성</strong>의 
+        <br>첫 페이지</span>
+      
       <p>Kim Sowon PORTFOLIO.</p>
     </div>
   </section>
@@ -253,6 +252,7 @@ setVh();
 
 </body>
 </html>
+
 
 
 
