--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <section id="intro" class="fade-in">
     <div class="intro-content">
       <span>
-      <strong>성실함과 열정</strong>을 담은 <strong>가능성</strong>의 
-        <br>첫 페이지</span>
+      <strong>성실함과 열정</strong>을 담은 <strong>가능성</strong>의 첫 페이지</span>
       
       <p>Kim Sowon PORTFOLIO.</p>
     </div>
@@ -252,6 +251,7 @@ setVh();
 
 </body>
 </html>
+
 
 
 
