--- a/profile.html
+++ b/profile.html
@@ -41,21 +41,21 @@
 
        
 
-      <strong>리더십<br></strong>
-        2년 연속 학급 반장과 학생회장으로서 다양한 의견을<br>
-         수렴하고 조율하며 팀을 이끌어 나감<br><br>
+      <strong>리더십과 문제 해결 능력<br></strong>
+       2년간의 학급반장과 1년의 학생회장직을 맡아 <br>
+         구성원들의 의견을 조율하며 다양한 행사를 기획 및 진행<br><br>
 
-      <strong>소통 능력<br></strong>
-        협업과 갈등 조정에 능하며,
-        <br> 동아리·학급·행사에서 조율자로 활약함<br><br>
+      <strong>주도적인 학습 능력<br></strong>
+        전공 심화 동아리 활동과 지방 기능 경기 대회 참여로 
+        <br>자율 주도적인 학습 능력 향상<br><br>
 
-      <strong>기획력<br></strong>
-        학교 축제, 진로활동, 캠페인 등 다양한 활동에서
-        <br> 주도적으로 기획 및 실행을 담당함<br><br>
+      <strong>성실함과 책임감<br></strong>
+        3년 동안 총 19개의 교내상 수상 등 높은 성적을 받으며
+        <br> 맡은 바를 꾸준히 완수하는 성실함 증명<br><br>
 
-        <strong>다양한 경험<br></strong>
-        전공심화동아리, 학생자치연합회, 기능경기대회<br>
-        피그마, 깃허브 사용 가능 등 다양한 경험 보유<br><br>
+        <strong>뛰어난 적응력과 도전 정신<br></strong>
+       학교 활동에 적극적으로 도전하며<br>
+        새로운 환경에 빠르게 적응하고 성과 창출<br><br>
 
       <strong>키워드<br></strong>#책임감 #리더십 #열정 #적응력 <br>
         #인성 #문제 해결 능력 #체계적 #꾸준함 </p>
@@ -295,4 +295,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
   <button id="scrollTopBtn">↑</button>
 </body>
+
 </html>
